[package]
name = "rlox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
gpoint = "0.2.1"
clap = "2"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
#     "llvm10-0",
# ] }
